Detect duplicate USB device notifications from udev.

This patch adds a check to detect when udev has sent Chrome multiple
notifications for the same device, ignoring the duplicates, as this
behavior has been observed in the wild.

I also fix DeviceReady() to not send a device added notification if a
device was disconnected while it was being enumerated. The device would
not have been added to the global device list in this case.

BUG=638298

Review-Url: https://codereview.chromium.org/2261783002
Cr-Commit-Position: refs/heads/master@{#413273}

Former-commit-id: f2c7b56f4a4f2c16b2f7062f60ad3041217e9f20